--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@
             .poster-grid { grid-template-columns: repeat(2, 1fr); gap: 10px; }
             h1 { font-size: 1.6rem; }
             .btn { width: 100%; }
-            .socials { gap: 15px; }
         }
     </style>
 </head>
@@ -90,7 +89,7 @@
             <div class="poster-item"><img src="stalingrad.jpg"><div class="poster-info"><h4>Сталинград</h4><span>2013</span></div></div>
             <div class="poster-item"><img src="parma.jpg"><div class="poster-info"><h4>Сердце Пармы</h4><span>2022</span></div></div>
             <div class="poster-item"><img src="tellher.jpg"><div class="poster-info"><h4>Скажи ей</h4><span>2020</span></div></div>
-            <div class="poster-item"><img src="sparta.jpg"><div class="poster-info"><h4>Спарта</h4><span>Netflix Original</span></div></div>
+            <div class="poster-item"><img src="sparta.jpg"><div class="poster-info"><h4>Спарта</h4><span>Netflix</span></div></div>
             <div class="poster-item"><img src="librarian.jpg"><div class="poster-info"><h4>Библиотекарь</h4><span>2023</span></div></div>
             <div class="poster-item"><img src="nenastie.jpg"><div class="poster-info"><h4>Ненастье</h4><span>2018</span></div></div>
             <div class="poster-item"><img src="montevideo.jpg"><div class="poster-info"><h4>Единица Монтевидео</h4><span>2023</span></div></div>
@@ -103,52 +102,4 @@
     <section>
         <h2>Материалы и интервью</h2>
         
-        <a href="https://doc.ru/ilya-tilkin-intervyu/" target="_blank" class="link-card">
-            <h3>Илья Тилькин: интервью Илоне Егиазаровой</h3>
-            <p>О системных ошибках индустрии, «пищевой цепочке» сценаристов и опыте работы над крупнейшими проектами.</p>
-        </a>
-
-        <a href="https://youtu.be/C6F7e6XH8jc" target="_blank" class="link-card">
-            <h3>Sheinkin40: Искусство проектирования</h3>
-            <p>Большой видео-разговор о создании «Сталинграда» и архитектуре смыслов в кино.</p>
-        </a>
-
-        <a href="https://oknofest.com/novosti/ilya-tilkin-lyuboj-dialog-mozhno-vosprinimat-kak-remarku" target="_blank" class="link-card">
-            <h3>Окно в Европу: Архитектура текста</h3>
-            <p>Профессиональный взгляд на структуру сюжета и законы современной драматургии.</p>
-        </a>
-
-        <a href="https://www.spb.kp.ru/daily/27002/4064595/" target="_blank" class="link-card">
-            <h3>Комсомольская правда: Сценарий как документ</h3>
-            <p>Об экранизации «Ненастья» Алексея Иванова и превращении прозы в визуальный ритм.</p>
-        </a>
-
-        <a href="https://www.youtube.com/live/YmzQvRwz5T4" target="_blank" class="link-card">
-            <h3>Эклеры Голициной: Личный путь</h3>
-            <p>О связи музыкального образования, темпоритма текста и универсальных навыков сценариста.</p>
-        </a>
-    </section>
-
-    <section>
-        <h2>Образование</h2>
-        <div class="course-box">
-            <h3>«Сценарное мастерство — универсальный навык»</h3>
-            <p>Курс по архитектуре истории для тех, кто хочет научиться проектировать сюжеты любой сложности.</p>
-            <div class="btn-group">
-                <a href="https://kinocourse.com/screenwritercourse/?utm_source=it" target="_blank" class="btn btn-outline">Узнать подробнее</a>
-                <a href="https://yookassa.ru/my/i/aWZgui7ZSDip/l" target="_blank" class="btn btn-white">Записаться на курс</a>
-            </div>
-        </div>
-    </section>
-
-    <footer>
-        <div class="socials">
-            <a href="https://www.kinopoisk.ru/name/1577484/" target="_blank">Кинопоиск</a>
-            <a href="https://www.imdb.com/name/nm3170757/" target="_blank">IMDb</a>
-            <a href="https://t.me/TILKIN_SCREENWRITING" target="_blank">Telegram-канал</a>
-            <a href="https://t.me/itilkin" target="_blank">Личный Telegram</a>
-        </div>
-    </footer>
-</div>
-</body>
-</html>
+        <a href="https://doc.ru/ilya-tilkin-intervyu/"
