--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <a href="https://www.kinopoisk.ru/name/1629112/" target="_blank">Кинопоиск</a>
             <a href="https://www.imdb.com/name/nm2658369/" target="_blank">IMDb</a>
             <a href="https://t.me/TILKIN_SCREENWRITING" target="_blank">Telegram</a>
-            <a href="https://t.me/itilkin" target="_blank">Личка</a>
+            <a href="mailto:ilia.tilkin@gmail.com">E-mail</a>
         </div>
     </footer>
 </div>
