--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <h2>Образование</h2>
         <div class="course-box">
             <h3>«Сценарное мастерство — универсальный навык»</h3>
-            <p>Курс по архитектуре истории для проектирования сюжетов любой сложности.</p>
+            <p>АВТОРСКИЙ КУРС ИЛЬИ ТИЛЬКИНА</p>
             <div class="btn-group">
                 <a href="https://kinocourse.com/screenwritercourse/?utm_source=it" target="_blank" class="btn btn-outline">Узнать подробнее</a>
                 <a href="https://yookassa.ru/my/i/aWZgui7ZSDip/l" target="_blank" class="btn btn-white">Записаться на курс</a>
