--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <span class="news-date">29 января 2026</span>
         <span class="news-title">Запуск авторского курса «Сценарное мастерство — универсальный навык»</span>
         <p class="news-text">Старт уникального онлайн-обучения, где я поделюсь инструментами создания историй, которые работают не только в кино, но и в жизни. Подробная программа и запись доступны на сайте курса.</p>
-        <a href="ССЫЛКА_НА_КУРС" target="_blank" class="btn-news">Подробности курса</a>
+        <a href="https://kinocourse.com/screenwritercourse/?utm_source=it" target="_blank" class="btn-news">Подробности курса</a>
     </div>
 
     <div class="news-item">
