--- a/index.html
+++ b/index.html
@@ -41,6 +41,43 @@
     .news-title { font-weight: bold; font-size: 1.2em; display: block; margin: 8px 0; color: var(--text); }
     .news-text { font-size: 0.9em; line-height: 1.5; color: var(--text); opacity: 0.8; }
     .btn-news { display: inline-block; padding: 10px 20px; background: var(--text); color: var(--bg); text-decoration: none; border-radius: 4px; font-size: 0.8em; font-weight: bold; margin-top: 10px; text-transform: uppercase; }
+        /* Стили для галереи фотографий */
+.gallery-grid { 
+    display: grid; 
+    grid-template-columns: repeat(3, 1fr); 
+    gap: 15px; 
+    margin-top: 30px;
+}
+.gallery-item { 
+    aspect-ratio: 3/2; 
+    overflow: hidden; 
+    border: 1px solid var(--border); 
+    cursor: zoom-in; 
+    border-radius: 4px;
+}
+.gallery-item img { 
+    width: 100%; 
+    height: 100%; 
+    object-fit: cover; 
+    transition: 0.3s; 
+}
+.gallery-item img:hover { transform: scale(1.05); }
+
+/* Адаптивность для мобильных */
+@media (max-width: 768px) {
+    .gallery-grid { grid-template-columns: repeat(2, 1fr); }
+}
+@media (max-width: 480px) {
+    .gallery-grid { grid-template-columns: 1fr; }
+}
+
+/* Стили окна увеличения */
+#lightbox { 
+    display: none; position: fixed; z-index: 9999; top: 0; left: 0; 
+    width: 100%; height: 100%; background: rgba(0,0,0,0.9); 
+    align-items: center; justify-content: center; 
+}
+#lightbox img { max-width: 90%; max-height: 90%; border: 2px solid #fff; }
     </style>
 </head>
 <body>
