--- a/index.html
+++ b/index.html
@@ -178,52 +178,50 @@
         </div>
     </section>
 <section>
-    <h2>backstage</h2>
+    <h2>BACKSTAGE</h2>
     <div class="gallery-grid">
-        <div class="gallery-item" onclick="openPhoto(this)"><img src="img/Арсеньев_Playback.JPG"></div>
-        <div class="gallery-item" onclick="showImg(this)"><img src="img/парма_playback.jpeg"></div>
-        <div class="gallery-item" onclick="openPhoto(this)"><img src="img/Арсеньев_с.jpg"></div>
-        <div class="gallery-item" onclick="openPhoto(this)"><img src="img/Арсеньев_хлопушка.jpg"></div>
-        <div class="gallery-item" onclick="openPhoto(this)"><img src="img/Воин_playback.jpeg"></div>
-        <div class="gallery-item" onclick="openPhoto(this)"><img src="img/Годунов_playback.jpeg"></div>
-        <div class="gallery-item" onclick="openPhoto(this)"><img src="img/Голем_хлопушка.jpeg"></div>
-        <div class="gallery-item" onclick="openPhoto(this)"><img src="img/Крестный_хлопушка.jpeg"></div>
-        <div class="gallery-item" onclick="openPhoto(this)"><img src="img/Парма_хлопушка.jpeg"></div>
-        <div class="gallery-item" onclick="openPhoto(this)"><img src="img/Протокол_хлопушка.jpg"></div>
-        <div class="gallery-item" onclick="openPhoto(this)"><img src="img/доска.jpeg"></div>
-
-        <div class="gallery-item" onclick="openPhoto(this)"><img src="img/Тилькин_Александрова_Коныжева.jpg"></div>
-        <div class="gallery-item" onclick="openPhoto(this)"><img src="img/Тилькин_Бондарчук.jpeg"></div>
-        <div class="gallery-item" onclick="openPhoto(this)"><img src="img/Тилькин_бондарчук01.jpeg"></div>
-        <div class="gallery-item" onclick="openPhoto(this)"><img src="img/Тилькин_Вержбицкий.jpeg"></div>
-        <div class="gallery-item" onclick="openPhoto(this)"><img src="img/Тилькин_Дапкунайте_машков.jpeg"></div>
-        <div class="gallery-item" onclick="openPhoto(this)"><img src="img/Тилькин_Иосифов.jpeg"></div>
-        <div class="gallery-item" onclick="openPhoto(this)"><img src="img/Тилькин_Климова.JPG"></div>
-        <div class="gallery-item" onclick="openPhoto(this)"><img src="img/Тилькин_Лютаева_Феклистов.JPEG"></div>
-        <div class="gallery-item" onclick="openPhoto(this)"><img src="img/Тилькин_Махарал.JPG"></div>
-        <div class="gallery-item" onclick="openPhoto(this)"><img src="img/Тилькин_Миронов.JPG"></div>
-        <div class="gallery-item" onclick="openPhoto(this)"><img src="img/Тилькин_Миронов_Киселев.jpeg"></div>
-        <div class="gallery-item" onclick="openPhoto(this)"><img src="img/Тилькин_Михалкова.jpg"></div>
-        <div class="gallery-item" onclick="openPhoto(this)"><img src="img/Тилькин_Панин.jpeg"></div>
-        <div class="gallery-item" onclick="openPhoto(this)"><img src="img/Тилькин_Серебряков.jpeg"></div>
-        <div class="gallery-item" onclick="openPhoto(this)"><img src="img/Тилькин_Смоляков.JPG"></div>
-        <div class="gallery-item" onclick="openPhoto(this)"><img src="img/Тилькин_Степин.JPG"></div>
-        <div class="gallery-item" onclick="openPhoto(this)"><img src="img/Тилькин_Урсуляк.jpeg"></div>
-        <div class="gallery-item" onclick="openPhoto(this)"><img src="img/Тилькин_Чеботарев.JPG"></div>
-        <div class="gallery-item" onclick="openPhoto(this)"><img src="img/Тилькин_духин.jpg"></div>
-        <div class="gallery-item" onclick="openPhoto(this)"><img src="img/янковский.jpeg"></div>
-
-        <div class="gallery-item" onclick="openPhoto(this)"><img src="img/арсеньев_зима.jpeg"></div>
-        <div class="gallery-item" onclick="openPhoto(this)"><img src="img/выборг01.jpg"></div>
-        <div class="gallery-item" onclick="openPhoto(this)"><img src="img/короче01.jpeg"></div>
-        <div class="gallery-item" onclick="openPhoto(this)"><img src="img/Короче02.png"></div>
-        <div class="gallery-item" onclick="openPhoto(this)"><img src="img/ненастье.jpeg"></div>
-        <div class="gallery-item" onclick="openPhoto(this)"><img src="img/пилот01.jpeg"></div>
-        <div class="gallery-item" onclick="openPhoto(this)"><img src="img/пилот2.jpeg"></div>
-        <div class="gallery-item" onclick="openPhoto(this)"><img src="img/пилот_жюри.jpg"></div>
-        <div class="gallery-item" onclick="openPhoto(this)"><img src="img/распутин.jpeg"></div>
-        <div class="gallery-item" onclick="openPhoto(this)"><img src="img/Стар.jpeg"></div>
-        <div class="gallery-item" onclick="openPhoto(this)"><img src="img/МН.jpeg"></div>
+        <div class="gallery-item" onclick="openPhoto(this)"><img src="Арсеньев_Playback.JPG"></div>
+        <div class="gallery-item" onclick="openPhoto(this)"><img src="Арсеньев_с.jpg"></div>
+        <div class="gallery-item" onclick="openPhoto(this)"><img src="Арсеньев_хлопушка.jpg"></div>
+        <div class="gallery-item" onclick="openPhoto(this)"><img src="Воин_playback.jpeg"></div>
+        <div class="gallery-item" onclick="openPhoto(this)"><img src="Годунов_playback.jpeg"></div>
+        <div class="gallery-item" onclick="openPhoto(this)"><img src="Голем_хлопушка.jpeg"></div>
+        <div class="gallery-item" onclick="openPhoto(this)"><img src="Короче02.jpg"></div>
+        <div class="gallery-item" onclick="openPhoto(this)"><img src="Крестный_хлопушка.jpeg"></div>
+        <div class="gallery-item" onclick="openPhoto(this)"><img src="МН.jpeg"></div>
+        <div class="gallery-item" onclick="openPhoto(this)"><img src="парма_playback.jpeg"></div>
+        <div class="gallery-item" onclick="openPhoto(this)"><img src="Парма_хлопушка.jpeg"></div>
+        <div class="gallery-item" onclick="openPhoto(this)"><img src="Протокол_хлопушка.jpg"></div>
+        <div class="gallery-item" onclick="openPhoto(this)"><img src="Стар.jpeg"></div>
+        <div class="gallery-item" onclick="openPhoto(this)"><img src="Тилькин_Александрова_Коныжева.jpg"></div>
+        <div class="gallery-item" onclick="openPhoto(this)"><img src="Тилькин_Бондарчук.jpeg"></div>
+        <div class="gallery-item" onclick="openPhoto(this)"><img src="Тилькин_Вержбицкий.jpeg"></div>
+        <div class="gallery-item" onclick="openPhoto(this)"><img src="Тилькин_Дапкунайте_машков.jpeg"></div>
+        <div class="gallery-item" onclick="openPhoto(this)"><img src="Тилькин_Иосифов.jpeg"></div>
+        <div class="gallery-item" onclick="openPhoto(this)"><img src="Тилькин_Климова.JPG"></div>
+        <div class="gallery-item" onclick="openPhoto(this)"><img src="Тилькин_Лютаева_Феклистов.JPEG"></div>
+        <div class="gallery-item" onclick="openPhoto(this)"><img src="Тилькин_Махарал.JPG"></div>
+        <div class="gallery-item" onclick="openPhoto(this)"><img src="Тилькин_Миронов.JPG"></div>
+        <div class="gallery-item" onclick="openPhoto(this)"><img src="Тилькин_Миронов_Киселев.jpeg"></div>
+        <div class="gallery-item" onclick="openPhoto(this)"><img src="Тилькин_Михалкова.jpg"></div>
+        <div class="gallery-item" onclick="openPhoto(this)"><img src="Тилькин_Панин.jpeg"></div>
+        <div class="gallery-item" onclick="openPhoto(this)"><img src="Тилькин_Серебряков.jpeg"></div>
+        <div class="gallery-item" onclick="openPhoto(this)"><img src="Тилькин_Смоляков.JPG"></div>
+        <div class="gallery-item" onclick="openPhoto(this)"><img src="Тилькин_Степин.JPG"></div>
+        <div class="gallery-item" onclick="openPhoto(this)"><img src="Тилькин_Урсуляк.jpeg"></div>
+        <div class="gallery-item" onclick="openPhoto(this)"><img src="Тилькин_Чеботарев.JPG"></div>
+        <div class="gallery-item" onclick="openPhoto(this)"><img src="Тилькин_бондарчук01.jpeg"></div>
+        <div class="gallery-item" onclick="openPhoto(this)"><img src="Тилькин_духин.jpg"></div>
+        <div class="gallery-item" onclick="openPhoto(this)"><img src="арсеньев_зима.jpeg"></div>
+        <div class="gallery-item" onclick="openPhoto(this)"><img src="выборг01.jpg"></div>
+        <div class="gallery-item" onclick="openPhoto(this)"><img src="доска.jpeg"></div>
+        <div class="gallery-item" onclick="openPhoto(this)"><img src="короче01.jpeg"></div>
+        <div class="gallery-item" onclick="openPhoto(this)"><img src="ненастье.jpeg"></div>
+        <div class="gallery-item" onclick="openPhoto(this)"><img src="пилот01.jpeg"></div>
+        <div class="gallery-item" onclick="openPhoto(this)"><img src="пилот2.jpeg"></div>
+        <div class="gallery-item" onclick="openPhoto(this)"><img src="пилот_жюри.jpg"></div>
+        <div class="gallery-item" onclick="openPhoto(this)"><img src="распутин.jpeg"></div>
+        <div class="gallery-item" onclick="openPhoto(this)"><img src="янковский.jpeg"></div>
     </div>
 </section>
 <div id="lightbox" onclick="this.style.display='none'"><img id="limg"></div>
@@ -236,10 +234,13 @@
         </div>
     </footer>
 </div>
-    <script>
+   <script>
     function openPhoto(el) {
-        document.getElementById("limg").src = el.querySelector('img').src;
-        document.getElementById("lightbox").style.display = "flex";
+        const img = el.querySelector('img');
+        const lightbox = document.getElementById("lightbox");
+        const limg = document.getElementById("limg");
+        limg.src = img.src;
+        lightbox.style.display = "flex";
     }
 </script>
 </body>
