--- a/index.html
+++ b/index.html
@@ -219,8 +219,8 @@
         <div class="gallery-item" onclick="openPhoto(this)"><img src="Воин_playback.jpeg"></div>
         <div class="gallery-item" onclick="openPhoto(this)"><img src="Годунов_playback.jpeg"></div>
         <div class="gallery-item" onclick="openPhoto(this)"><img src="Голем_хлопушка.jpeg"></div>
-        <div class="gallery-item" onclick="openPhoto(this)"><img src="Короче02.jpg"></div>
-        <div class="gallery-item" onclick="openPhoto(this)"><img src="Крестный_хлопушка.jpeg"></div>
+        <div class="gallery-item" onclick="openPhoto(this)"><img src="Короче02.jpeg"></div>
+        <div class="gallery-item" onclick="openPhoto(this)"><img src="крестный_хлопушка.jpeg"></div>
         <div class="gallery-item" onclick="openPhoto(this)"><img src="МН.jpeg"></div>
         <div class="gallery-item" onclick="openPhoto(this)"><img src="парма_playback.jpeg"></div>
         <div class="gallery-item" onclick="openPhoto(this)"><img src="Парма_хлопушка.jpeg"></div>
@@ -229,7 +229,7 @@
         <div class="gallery-item" onclick="openPhoto(this)"><img src="Тилькин_Александрова_Коныжева.jpg"></div>
         <div class="gallery-item" onclick="openPhoto(this)"><img src="Тилькин_Бондарчук.jpeg"></div>
         <div class="gallery-item" onclick="openPhoto(this)"><img src="Тилькин_Вержбицкий.jpeg"></div>
-        <div class="gallery-item" onclick="openPhoto(this)"><img src="Тилькин_Дапкунайте_машков.jpeg"></div>
+       <div class="gallery-item" onclick="openPhoto(this)"><img src="Тилькин_Дапкунайте_машков.jpeg"></div>
         <div class="gallery-item" onclick="openPhoto(this)"><img src="Тилькин_Иосифов.jpeg"></div>
         <div class="gallery-item" onclick="openPhoto(this)"><img src="Тилькин_Климова.JPG"></div>
         <div class="gallery-item" onclick="openPhoto(this)"><img src="Тилькин_Лютаева_Феклистов.JPEG"></div>
