--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
         <div class="gallery-item" onclick="openPhoto(this)"><img src="Воин_playback.jpeg"></div>
         <div class="gallery-item" onclick="openPhoto(this)"><img src="Годунов_playback.jpeg"></div>
         <div class="gallery-item" onclick="openPhoto(this)"><img src="Голем_хлопушка.jpeg"></div>
-        <div class="gallery-item" onclick="openPhoto(this)"><img src="koroche02.jpeg"></div>
+        <div class="gallery-item" onclick="openPhoto(this)"><img src="koroche02.png"></div>
         <div class="gallery-item" onclick="openPhoto(this)"><img src="krestny.jpeg"></div>
         <div class="gallery-item" onclick="openPhoto(this)"><img src="МН.jpeg"></div>
         <div class="gallery-item" onclick="openPhoto(this)"><img src="парма_playback.jpeg"></div>
