--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="yandex-verification" content="e66be79dc85d0338" />
-    <title>Илья Тилькин | Киносценарист и Драматург</title>
+    <title>Илья Тилькин | Кинодраматург, режиссер и шоураннер</title>
     <style>
         :root { --bg: #0d0d0d; --text: #ffffff; --secondary: #a0a0a0; --border: #262626; }
         body { font-family: 'Georgia', serif; background-color: var(--bg); color: var(--text); margin: 0; padding: 0; line-height: 1.6; }
@@ -140,7 +140,7 @@
     <header>
         <img src="profile.jpg" alt="Илья Тилькин" class="profile-pic">
         <h1>Илья Тилькин</h1>
-        <div class="profession">Киносценарист · Драматург</div>
+        <div class="profession">Кинодраматург · Режиссер · Шоураннер</div>
     </header>
     <section class="news-block">
     <h2 style="margin-top:0; color: var(--text);">Новости</h2>
