--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="yandex-verification" content="e66be79dc85d0338" />
     <title>Илья Тилькин | Кинодраматург, режиссер и шоураннер</title>
-    <style>
+    <meta property="og:title" content="Илья Тилькин — Кинодраматург, режиссер, шоураннер">
+    <meta property="og:description" content="Официальный сайт. Кинодраматургия, режиссура, проекты и бэкстейдж.">
+    <meta property="og:image" content="https://tilkin.pro/city.jpg">
+    <meta property="og:url" content="https://tilkin.pro/">
+    <meta property="og:type" content="website">
+        <style>
         :root { --bg: #0d0d0d; --text: #ffffff; --secondary: #a0a0a0; --border: #262626; }
         body { font-family: 'Georgia', serif; background-color: var(--bg); color: var(--text); margin: 0; padding: 0; line-height: 1.6; }
         .container { max-width: 1100px; margin: 0 auto; padding: 40px 20px; }
