--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Илья Тилькин | Кинодраматург, режиссер и шоураннер</title>
     <meta property="og:title" content="Илья Тилькин — Кинодраматург, режиссер, шоураннер">
     <meta property="og:description" content="Официальный сайт. Кинодраматургия, режиссура, проекты и бэкстейдж.">
-    <meta property="og:image" content="https://tilkin.pro/city.jpg">
+    <meta property="og:image" content="https://tilkin.pro/пилот2.jpeg">
     <meta property="og:url" content="https://tilkin.pro/">
     <meta property="og:type" content="website">
         <style>
