--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         <div class="gallery-item" onclick="openPhoto(this)"><img src="Воин_playback.jpeg"></div>
         <div class="gallery-item" onclick="openPhoto(this)"><img src="Годунов_playback.jpeg"></div>
         <div class="gallery-item" onclick="openPhoto(this)"><img src="Голем_хлопушка.jpeg"></div>
-        <div class="gallery-item" onclick="openPhoto(this)"><img src="koroche02.jpg"></div>
+        <div class="gallery-item" onclick="openPhoto(this)"><img src="294A8501.jpg"></div>
         <div class="gallery-item" onclick="openPhoto(this)"><img src="krestny.jpeg"></div>
         <div class="gallery-item" onclick="openPhoto(this)"><img src="МН.jpeg"></div>
         <div class="gallery-item" onclick="openPhoto(this)"><img src="парма_playback.jpeg"></div>
