--- a/index.html
+++ b/index.html
@@ -9,7 +9,20 @@
     <meta property="og:description" content="Официальный сайт. Кинодраматургия, режиссура, проекты и бэкстейдж.">
     <meta property="og:image" content="https://tilkin.pro/пилот2.jpeg">
     <meta property="og:url" content="https://tilkin.pro/">
-    <meta property="og:type" content="website">
+    <meta property="og:type" content="website">    
+<!-- Yandex.Metrika counter -->
+<script type="text/javascript">
+    (function(m,e,t,r,i,k,a){
+        m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+        m[i].l=1*new Date();
+        for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+        k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)
+    })(window, document,'script','https://mc.yandex.ru/metrika/tag.js?id=106310355', 'ym');
+
+    ym(106310355, 'init', {ssr:true, webvisor:true, clickmap:true, ecommerce:"dataLayer", accurateTrackBounce:true, trackLinks:true});
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/106310355" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
         <style>
         :root { --bg: #0d0d0d; --text: #ffffff; --secondary: #a0a0a0; --border: #262626; }
         body { font-family: 'Georgia', serif; background-color: var(--bg); color: var(--text); margin: 0; padding: 0; line-height: 1.6; }
