--- a/index.html
+++ b/index.html
@@ -151,27 +151,44 @@
     align-items: center; justify-content: center; 
 }
 #lightbox img { max-width: 90%; max-height: 90%; border: 1px solid #444; }
-            .agent-btn {
+            .contact-section {
+    text-align: center;
+    padding: 80px 20px;
+    background: #000; /* Глубокий черный фон для контраста */
+}
+
+.contact-divider {
+    width: 50px;
+    height: 1px;
+    background: var(--secondary);
+    margin: 0 auto 30px;
+}
+
+.contact-section p {
+    font-size: 0.9rem;
+    color: var(--secondary);
+    margin-bottom: 25px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+}
+
+.agent-btn {
     display: inline-block;
-    margin-top: 25px;
-    padding: 12px 24px;
-    border: 1px solid var(--secondary);
+    padding: 15px 40px;
+    border: 1px solid var(--text);
     color: var(--text);
     text-decoration: none;
-    font-family: sans-serif;
-    font-size: 0.75rem;
+    font-size: 0.8rem;
     text-transform: uppercase;
     letter-spacing: 2px;
-    transition: 0.3s;
-    border-radius: 2px;
+    transition: 0.4s ease;
 }
 
 .agent-btn:hover {
     background: var(--text);
-    color: var(--bg);
-    border-color: var(--text);
+    color: #000;
 }
-    </style>
+            </style>
 </head>
 <body>
 <div class="container">
@@ -179,8 +196,7 @@
         <img src="profile.jpg" alt="Илья Тилькин" class="profile-pic">
         <h1>Илья Тилькин</h1>
         <div class="profession">Кинодраматург · Режиссер · Шоураннер</div>
-        <a href="https://t.me/kurkinson" class="agent-btn" target="_blank">агент Анна Куркина</a>
-    </header>
+            </header>
     <section class="news-block">
     <h2 style="margin-top:0; color: var(--text);">Новости</h2>
 
@@ -306,6 +322,11 @@
             <a href="https://t.me/TILKIN_SCREENWRITING" target="_blank">Telegram</a>
             <a href="mailto:ilia.tilkin@gmail.com">E-mail</a>
         </div>
+        <section class="contact-section">
+    <div class="contact-divider"></div>
+    <p>Для деловых предложений и сотрудничества</p>
+    <a href="https://t.me/НИК_АГЕНТА" class="agent-btn" target="_blank">Связаться с агентом</a>
+</section>
     </footer>
 </div>
    <script>
