--- a/index.html
+++ b/index.html
@@ -324,8 +324,8 @@
         </div>
         <section class="contact-section">
     <div class="contact-divider"></div>
-    <p>Для деловых предложений и сотрудничества</p>
-    <a href="https://t.me/НИК_АГЕНТА" class="agent-btn" target="_blank">Связаться с агентом</a>
+    <p>Агент Анна Куркина · Агентство "А+" </p>
+    <a href="https://t.me/kurkinson" class="agent-btn" target="_blank">Для деловых предложений и сотрудничества</a>
 </section>
     </footer>
 </div>
